# gxi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  rustfmt.toml
.vim/: coc-settings.json
binds/desktop_binds/: Cargo.toml  mod.rs  run.rs
binds/desktop_binds/src/: lib.rs  run.rs
binds/desktop_binds/src/containers/: fake.rs  mod.rs  view.rs  window.rs
binds/desktop_binds/src/widgets/: mod.rs  widget_macros.rs
binds/desktop_binds/widgets/: button.rs
binds/gxi_desktop_binds/: Cargo.toml
binds/gxi_desktop_binds/src/containers/: window.rs
binds/gxi_desktop_binds/src/widgets/: button.rs  spinner.rs  widget_macros.rs
binds/gxi_web_binds/: Cargo.toml
binds/gxi_web_binds/src/: global_attributes.rs
binds/gxi_web_binds/src/containers/: mod.rs  picture.rs  tbody.rs  thead.rs
binds/gxi_web_binds/src/widgets/: widget_impl_macro.rs
binds/web_binds/: Cargo.toml  mod.rs
binds/web_binds/containers/: data.rs  dd.rs  dt.rs  footer.rs  p.rs  rt.rs  sup.rs
binds/web_binds/src/: global_attributes.rs  lib.rs  node_impl_macros.rs  run.rs  util_macros.rs  web_impl_macros.rs  web_node_ext.rs
binds/web_binds/src/containers/: a.rs  abbr.rs  address.rs  area.rs  audio.rs  b.rs  bdi.rs  bdo.rs  blockquote.rs  body.rs  br.rs  button.rs  canvas.rs  caption.rs  cite.rs  code.rs  col.rs  colgroup.rs  container_impl_macro.rs  data.rs  datalist.rs  dd.rs  del.rs  details.rs  dfn.rs  dialog.rs  div.rs  dl.rs  dt.rs  el.rs  em.rs  embed.rs  fieldset.rs  figcaption.rs  figure.rs  form.rs  h1.rs  h4.rs  h5.rs  h6.rs  (+52 more)
binds/web_binds/src/containers/heading/: h1.rs  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  mod.rs
binds/web_binds/src/containers/text/: colgroup.rs  h1.rs  h2.rs  h3.rs  h4.rs  h5.rs  h6.rs  mod.rs  p.rs
binds/web_binds/src/widgets/: base.rs  h1.rs  hr.rs  iframe.rs  img.rs  input.rs  link.rs  meta.rs  mod.rs  script.rs  style.rs  widget_impl_macro.rs
binds/web_binds/widgets/: iframe.rs  style.rs
docs/: context_tree.md
examples/: .gitignore
examples/cat_fact/: Cargo.toml
examples/cat_fact/src/: app.rs  centre.rs  counter.rs  main.rs
examples/desktop/: Cargo.toml
examples/desktop/.cargo/: .config
examples/desktop/src/: app.rs  centre.rs  counter.rs  main.rs
examples/web/: Cargo.toml  Makefile  index.css  index.html
examples/web/public/: index.css
examples/web/src/: app.rs  cat_fact.rs  counter.rs  main.rs  todo.rs
gxi-derive/: Cargo.toml
gxi-derive/src/: derive_vnode.rs  lib.rs  native_node.rs  node.rs  v_node_type.rs
gxi-derive/src/parsers/: component_derive.rs  container_widget_derive.rs  mod.rs  top_level_container_derive.rs  top_level_container_widget_derive.rs  widget_derive.rs
gxi-derive/src/vnode/: container.rs  default.rs  leaf.rs  mod.rs
gxi-desktop/: Cargo.toml
gxi-desktop/src/: impl_macros.rs  impl_widget.rs  lib.rs  run.rs
gxi-desktop/src/containers/: view.rs  window.rs
gxi-desktop/src/widgets/: button.rs  image.rs  spinner.rs  text.rs  widget_macros.rs
gxi-macros/: Cargo.toml
gxi-macros/src/: comp.rs  lib.rs  mod_state.rs  render.rs  set_state.rs  state.rs  update.rs
gxi-transpiler/: Cargo.toml  README.md
gxi-transpiler-core/: Cargo.toml
gxi-transpiler-core/src/: lib.rs  lifetime.rs  observables.rs  observer_builder.rs  scope.rs  snippets.rs  state.rs  sub_tree.rs
gxi-transpiler-core/src/blocks/: mod.rs  root.rs
gxi-transpiler-core/src/blocks/conditional/: block.rs  match_block.rs  mod.rs
gxi-transpiler-core/src/blocks/conditional/iff/: arm.rs  block.rs  mod.rs  subtree.rs
gxi-transpiler-core/src/blocks/execution/: mod.rs
gxi-transpiler-core/src/blocks/node/: block.rs  mod.rs  prop.rs  subtree.rs  wrapper.rs
gxi-transpiler/src/: block.rs  block_parser.rs  blocks.rs  init_type.rs  lib.rs  lifetime.rs  observer_builder.rs  optional_parse.rs  root_block.rs  scope.rs  sub_tree.rs  tree_parser.rs
gxi-transpiler/src/component/: README.md  block.rs  mod.rs  prop.rs
gxi-transpiler/src/conditional/: README.md  block.rs  if_block.rs  if_subtree.rs  match_block.rs  mod.rs
gxi-transpiler/src/conditional/iff/: arm.rs  block.rs  subtree.rs
gxi-transpiler/src/execution/: mod.rs
gxi-transpiler/src/node/: block.rs  mod.rs  node_subtree.rs  prop.rs  subtree.rs
gxi-web/: Cargo.toml
gxi-web/example/: Cargo.toml
gxi-web/example/src/: app.rs  main.rs
gxi-web/src/: lib.rs  prelude.rs  run.rs  web_element.rs  web_widget.rs  widget.rs
gxi-web/src/containers/: abbr.rs  b.rs  bdi.rs  body.rs  br.rs  colgroup.rs  container_impl_macro.rs  div.rs  dl.rs  form.rs  h3.rs  header.rs  html.rs  label.rs  mod.rs  q.rs  th.rs  wbr.rs
gxi-web/src/widgets/: img.rs
gxi_interface/: Cargo.toml  README.md
gxi_interface/src/: lib.rs
gxi_interface/src/nodes/: mod.rs
gxi_macro/: Cargo.toml  README.md
gxi_macro/src/: gxi_parser.rs  init_type.rs  lib.rs  tree_parser.rs
gxi_macro/tests/: Cargo.toml  h.rs
gxi_macro/tests/src/: helpers.rs  lib.rs
gxi_macro/tests/src/comps/: comp.rs  mod.rs
macros/: Cargo.toml
macros/comp/: Cargo.toml
macros/comp/src/: lib.rs
macros/gxi_c_macro/: Cargo.toml
macros/gxi_c_macro/src/: lib.rs
macros/gxi_comp_macro/: Cargo.toml
macros/gxi_comp_macro/src/: lib.rs
macros/gxi_macro/: Cargo.toml  README.md
macros/gxi_macro/src/: lib.rs
macros/gxi_parsers/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
macros/gxi_parsers/src/: comp_parser.rs  gxi_parser.rs  init_type.rs  lib.rs  tree_parser.rs
macros/gxi_update_macro/: Cargo.toml  README.md
macros/gxi_update_macro/src/: lib.rs
rust_gui_interface/: Cargo.toml
rust_gui_interface/src/: lib.rs
rust_gui_interface/src/nodes/: mod.rs  node.rs  node_macros.rs  should_render.rs
rust_gui_interface/src/nodes/components/: fake.rs  init.rs  mod.rs  pure.rs
src/: async_observable.rs  async_state.rs  button.rs  comp.rs  component.rs  init_member.rs  lib.rs  macros.rs  main.rs  native_widget.rs  node.rs  node_impl_macros.rs  observable.rs  observers.rs  parser_macros.rs  renderable.rs  run.rs  state.rs  text.rs  view.rs  vnode.rs  vnode_type.rs
tests/: Cargo.toml  (+2 more)
(+235 files in other folders)
