[package]
name = "gxi"
version = "0.6.1"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2021"
description = "A Declarative Cross-Platform Native UI-Framework"
license = "MIT"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
categories = ["gui", "wasm", "web-programming"]
keywords = ["gxi-rs", "wasm", "gtk", "gui", "framework"]

[features]
web = [
  "gxi-derive/web",
  "gxi-transpiler/web",
  "gxi-macros/web",
  "web-sys",
  "wasm-bindgen",
]
async-web = ["wasm-bindgen-futures"]
desktop = ["gxi-derive/desktop", "gxi-transpiler/desktop", "gxi-macros/desktop"]
default = ["gxi-derive/default", "gxi-transpiler/default", "gxi-macros/default"]

[workspace]
members = ["gxi-derive", "gxi-transpiler", "gxi-transpiler-core", "gxi-macros", "examples/web"]

[dependencies]
gxi-derive = { path = "gxi-derive", version = "^0.6.1", optional = true }
gxi-transpiler = { path = "gxi-transpiler", version = "^0.6.0", optional = true }
gxi-macros = { path = "gxi-macros", version = "^0.6.1", optional = true }

# web
wasm-bindgen = { version = "0.2.83", optional = true }
wasm-bindgen-futures = { version = "0.4.33", optional = true }
web-sys = { version = "0.3.60", features = [
  "Element",
  "Window",
  "Document",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlCollection",
  "Text",
  # events
  'Event',
  'EventListener',
  'MouseEvent',
  'DragEvent',
  'InputEvent',
  'FocusEvent',
  'KeyboardEvent',
  'ProgressEvent',
  'WheelEvent',
], optional = true }
derive_more = "0.99.17"
