[package]
name = "gxi-desktop"
version = "0.1.0"
authors = ["Aniket Prajapati <prajapati.ani306@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.9.2"
glib = "0.10.3"

[dependencies.gxi]
path = "../"
version = "0.2.0"

[dependencies.tokio]
version = "1.5.0"
features = ["sync", "rt", "rt-multi-thread"]