[package]
name = "gxi-macros"
version = "0.4.0-nightly.1"
edition = "2021"
license = "MIT"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
description = "collection of macros for gxi-rs"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
keywords = [
    "gxi-rs",
    "gxi-macro"
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.73", features = ["full"] }
quote = "1.0.9"

