[package]
name = "gxi-macros"
version = "0.6.1"
edition = "2018"
license = "MIT"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
description = "collection of macros for gxi-rs"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
keywords = [
    "gxi-rs",
    "gxi-macro"
]

[lib]
proc-macro = true

[features]
web = []
desktop = []
default = []

[dependencies]
syn = { version = "1.0.100", features = ["full"] }
quote = "1.0.21"
