[package]
name = "gxi-transpiler-core"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["aniketfuryrocks <contact@aniketprajapati.me>"]
description = "implementation of gxi macro"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
keywords = ["gxi-rs", "gxi-macro"]

[features]
web = []
desktop = []
default = []

[dependencies]
syn = { version = "1.0.100", features = ["full"] }
quote = "1.0.21"

[dev-dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
