[package]
name = "gxi-transpiler-core"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["aniketfuryrocks <contact@aniketprajapati.me>"]
description = "implementation of gxi macro"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
keywords = ["gxi-rs", "gxi-macro"]

[features]
web = []
desktop = []
default = []

[dependencies]
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"

[dev-dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
