[package]
name = "gxi-transpiler"
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["aniketfuryrocks <contact@aniketprajapati.me>"]
description = "transpiler frontend of gxi"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.com/"
keywords = ["gxi-rs", "gxi-macro"]

[lib]
proc-macro = true

[features]
web = ["gxi-transpiler-core/web"]
desktop = ["gxi-transpiler-core/web"]
default = ["gxi-transpiler-core/default"]

[dependencies]
gxi-transpiler-core = { path = "../gxi-transpiler-core", version = "0.6.0", optional = true }
syn = { version = "1.0.92", features = ["full"] }
quote = "1.0.18"
