[package]
name = "gxi-web"
version = "0.1.0"
authors = ["Aniket Prajapati <prajapati.ani306@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.50"
features = [
    'Document', 'Element', 'HtmlElement', 'Node', 'HtmlHeadElement', 'Window', 'console', 'Event', 'EventListener', 'MouseEvent'
]