[package]
name = "gxi_interface"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[features]
desktop = ["gtk", "gxi_update_macro/desktop", "gxi_comp_macro/desktop", "gxi_parsers/desktop"]
web = ["web-sys", "wasm-bindgen", "gxi_update_macro/web", "gxi_comp_macro/web", "gxi_parsers/web"]

[dependencies]
gxi_c_macro = { path = "../macros/gxi_c_macro", version = "" }
gxi_comp_macro = { path = "../macros/gxi_comp_macro", optional = true, version = "" }
gxi_update_macro = { path = "../macros/gxi_update_macro", optional = true, version = "" }
gxi_parsers = { path = "../macros/gxi_parsers", optional = true, version = "" }
#desktop
gtk = { version = "0.9.2", optional = true }
#web
web-sys = { version = "0.3.50", features = ['Document', 'Element', 'HtmlElement', 'Node', 'HtmlHeadElement', 'Window', 'console', 'Event', 'EventListener', 'MouseEvent'], optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }
