[package]
name = "gxi_interface"
version = "0.1.1"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
description = "interface of the gxi-rs project"
license = "MIT"
edition = "2018"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.github.io/"
keywords = [
    "gxi-rs"
]

[features]
desktop = ["gtk", "gxi_update_macro/desktop", "gxi_macro/desktop", "gxi_parsers/desktop"]
web = ["web-sys", "wasm-bindgen", "gxi_update_macro/web", "gxi_macro/web", "gxi_parsers/web"]

[dependencies]
gxi_macro = { path = "../macros/gxi_macro", optional = true, version = "0" }
gxi_update_macro = { path = "../macros/gxi_update_macro", optional = true, version = "0" }
gxi_parsers = { path = "../macros/gxi_parsers", optional = true, version = "0" }
#desktop
gtk = { version = "0.9.2", optional = true }
#web
web-sys = { version = "0.3.50", features = ['Document', 'Element', 'HtmlElement', 'Node', 'HtmlHeadElement', 'Window', 'console', 'Event', 'EventListener', 'MouseEvent'], optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }
