[package]
name = "gxi_interface"
version = "0.1.4"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
description = "interface of the gxi-rs project"
license = "MIT"
edition = "2018"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.github.io/"
keywords = [
    "gxi-rs"
]

[features]
desktop = ["gtk", "gxi_macro/desktop", "gxi_parsers/desktop"]
web = ["web-sys", "gxi_macro/web", "gxi_parsers/web"]

[dependencies]
gxi_macro = { path = "../../gxi_macro", optional = true, version = "0" }
gxi_parsers = { path = "../../gxi_macro/gxi_parsers", optional = true, version = "0" }
#desktop
gtk = { version = "0.9.2", optional = true }
#web
[dependencies.web-sys]
version = "0"
features = [
    'Document', 'Element', 'HtmlElement', 'Node', 'HtmlHeadElement', 'Window', 'console', 'Event', 'EventListener', 'MouseEvent'
]
optional = true