[package]
name = "gxi_macro"
version = "0.1.2"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
description = "proc-macro for writing gxi components"
license = "MIT"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.github.io/"
keywords = [
    "gxi-rs",
    "gxi-macro"
]

[features]
web = []
desktop = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = ["full"] }
