[package]
name = "rust_gui_interface"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[features]
desktop = ["gtk"]
web = []

[dependencies]
c = { path = "../macros/c" }
comp = { path = "../macros/comp" }
parsers = { path = "../macros/parsers" }
update = { path = "../macros/update" }
tokio = { version = "", features = ["full"] }
#desktop
gtk = { version = "0.9.2", optional = true }
#web