[package]
name = "rust_gui_interface"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[features]
desktop = ["gtk"]
web = ["web-sys", "wasm-bindgen"]

[dependencies]
c = { path = "../macros/c" }
comp = { path = "../macros/comp" }
parsers = { path = "../macros/parsers" }
update = { path = "../macros/update" }
#desktop
gtk = { version = "0.9.2", optional = true }
#web
web-sys = { version = "0.3.50", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window','console'], optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }
