[package]
name = "rust_gui_interface"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[features]
desktop = ["gtk", "update/desktop", "comp/desktop", "parsers/desktop"]
web = ["web-sys", "wasm-bindgen", "update/web", "comp/web","parsers/web"]

[dependencies]
c = { path = "../macros/c" }
comp = { path = "../macros/comp", optional = true }
update = { path = "../macros/update", optional = true }
parsers = { path = "../macros/parsers", optional = true }
#desktop
gtk = { version = "0.9.2", optional = true }
#web
web-sys = { version = "0.3.50", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'console', 'Event', 'EventListener', 'MouseEvent'], optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }
