[package]
name = "desktop_binds"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gxi_interface = { path = "../../gxi_interface", features = ["desktop"] }
glib = { version = "0.10.3" }
tokio = { version = "", features = ["sync", "rt", "rt-multi-thread"] }
