[package]
name = "gxi_web_binds"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
description = "Web bindings for gxi"
license = "MIT"

[dependencies]
gxi_interface = { path = "../../gxi_interface", features = ["web"], version = "0" }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.23"