[package]
name = "cat_fact"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gui = { path = "../../" }
reqwest = { version = "0.11.2", features = ["json"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }