[package]
name = "desktop"
version = "0.2.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.64"

[dependencies.gxi]
path = "../../"
version = "*"

[dependencies.reqwest]
version = "0.11.2"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
