[package]
name = "web"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.64"

[dependencies.gxi]
path = "../../"
features = ["web"]
version = ""

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.2"
features = ["json"]
