[package]
name = "gxi_comp_macro"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"

[features]
web = ["gxi_parsers/web"]
desktop = ["gxi_parsers/desktop"]

[lib]
proc-macro = true

[dependencies]
gxi_parsers = { path = "../gxi_parsers", optional = true, version = "" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0.9"