[package]
name = "gxi_macro"
version = "0.1.1"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
description = "This proc-macro is the most efficient and the only recommended way of writing components in gxi."
license = "MIT"

[features]
web = ["gxi_parsers/web"]
desktop = ["gxi_parsers/desktop"]

[lib]
proc-macro = true

[dependencies]
gxi_parsers = { path = "../gxi_parsers", optional = true, version = "0" }
syn = { version = "1.0", features = ["full"] }
