[package]
name = "gxi_macro"
version = "0.1.1"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
description = "proc-macro for writing gxi components"
license = "MIT"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.github.io/"
keywords = [
    "gxi-rs",
    "gxi-macro"
]

[features]
web = ["gxi_parsers/web"]
desktop = ["gxi_parsers/desktop"]

[lib]
proc-macro = true

[dependencies]
gxi_parsers = { path = "../gxi_parsers", optional = true, version = "0" }
syn = { version = "1.0", features = ["full"] }
