[package]
name = "gxi_parsers"
version = "0.1.1"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
description = "parsers for gxi macros"
license = "MIT"
edition = "2018"
repository = "https://github.com/gxi-rs/gxi.git"
homepage = "https://gxi-rs.github.io/"
keywords = [
    "gxi-rs"
]

[features]
web = []
desktop = []

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = ["full"] }
