[package]
name = "gxi_update_macro"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
web = []
desktop = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "", features = ["full"] }
