[package]
name = "gxi_update_macro"
version = "0.1.0"
authors = ["aniketfuryrocks <prajapati.ani306@gmail.com>"]
edition = "2018"
description = "`Derive macro` for generating the `update` function for the component."
license = "MIT"

[features]
web = []
desktop = []

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
syn = { version = "1.0", features = ["full"] }
